<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtSub1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="106sp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="420sp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtSub2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSub1"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtSub3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSub2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtSub4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSub3"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtSub5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSub4" />

    <Button
        android:id="@+id/btnCompute"
        android:layout_width="169dp"
        android:layout_height="55dp"
        android:layout_marginTop="8sp"
        android:onClick="computeGPA"
        android:text="@string/app_btn_Compute_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSub5"
        app:layout_constraintVertical_bias="0.124" />

    <TextView
        android:id="@+id/tvMobComp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="106sp"
        android:breakStrategy="simple"
        android:text="@string/app_tv_mc_lbl"
        app:layout_constraintBottom_toBottomOf="@+id/txtSub1"
        app:layout_constraintEnd_toStartOf="@+id/txtSub1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28sp"
        android:layout_marginBottom="30sp"
        android:breakStrategy="simple"
        android:text="@string/app_tv_os_lbl"
        app:layout_constraintBottom_toBottomOf="@+id/txtSub2"
        app:layout_constraintEnd_toStartOf="@+id/txtSub2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMobComp"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/tvDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28sp"
        android:layout_marginBottom="30sp"
        android:breakStrategy="simple"
        android:text="@string/app_tv_db_lbl"
        app:layout_constraintBottom_toBottomOf="@+id/txtSub3"
        app:layout_constraintEnd_toStartOf="@+id/txtSub3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOS"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:id="@+id/tvSE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28sp"
        android:layout_marginBottom="30sp"
        android:breakStrategy="simple"
        android:text="@string/app_tv_se_lbl"
        app:layout_constraintBottom_toBottomOf="@+id/txtSub4"
        app:layout_constraintEnd_toStartOf="@+id/txtSub4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDB"
        app:layout_constraintVertical_bias="0.21" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="162dp"
        android:layout_height="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/images" />

    <TextView
        android:id="@+id/tvAppNotfn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="87sp"
        android:breakStrategy="simple"
        android:text="@string/app_Welcome_msg"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/txtSub1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvCL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="Cyber Law"
        app:layout_constraintBottom_toBottomOf="@+id/txtSub5"
        app:layout_constraintEnd_toStartOf="@+id/txtSub5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>